--- a/TODO.org
+++ b/TODO.org
@@ -59,8 +59,13 @@
   Nodes should have a set of "neighbor" nodes which they propagate
   updates to, and request updates from.
 * TODO Abstract network interface
-  - [ ] Abstract location (host/port)
-  - [ ] Abstract serve/send/receive
+  :LOGBOOK:
+  CLOCK: [2013-05-29 Wed 01:49]--[2013-05-29 Wed 01:56] =>  0:07
+  CLOCK: [2013-05-29 Wed 01:27]--[2013-05-29 Wed 01:48] =>  0:21
+  :END:
+  - [X] Abstract location (host/port)
+  - [X] Abstract serve/send/receive
+  - [ ] Use abstract interface
 * TODO Components configuration
   Some way to chose what parts of LTc to start.
 * TODO Report outline
