rebrand interim report as final project report

--- a/docs/template.tex
+++ b/docs/template.tex
@@ -81,7 +81,7 @@
 \setlength{\parskip}{6pt plus 2pt minus 1pt}
 \setlength{\emergencystretch}{3em}  % prevent overfull lines
 
-\newcommand{\mytitle}{LTc: Replicated data stores over bad connections\\[0.4cm]Interim Report}
+\newcommand{\mytitle}{LTc: Replicated data stores over bad connections\\[0.4cm]Project Report}
 \newcommand{\myauthor}{Alexandru Scvor\c tov}
 \newcommand{\myemail}{\email{<as10109@doc.ic.ac.uk>}}
 
