--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1,1 +1,343 @@
-../reference/references.bib
+@incollection{Fogel12,
+  author = {Karl Fogel},
+  editor = {Andy Oram and Greg Wilson},
+  booktitle = {Beautiful Code},
+  title = {Subversion's Delta Editor: Interface As Ontology},
+  publisher = {O'Reilly Media},
+  date = {2007-06-26},
+  year = {2007}
+}
+
+@inbook{Chacon09,
+  author = {Scott Chacon},
+  booktitle = {Pro Git},
+  title = {Git Internals - Transfer Protocols},
+  publisher = {Apress},
+  date = {2009-09-27},
+  year = {2009}
+}
+
+@misc{Zicari12,
+  author = {Roberto V. Zicari},
+  title = {Two Cons Against NoSQL. Part I},
+  url = {http://www.odbms.org/blog/2012/10/two-cons-against-nosql-part-i/},
+  date = {2012-10-30},
+  year = {2012},
+  note = {[Online; accessed 29-November-2012]}
+}
+
+@misc{Sheehy12,
+  author = {Roberto V. Zicari},
+  title = {On Eventual Consistency --– An interview with Justin Sheehy},
+  url = {http://www.odbms.org/blog/2012/08/on-eventual-consistency-an-interview-with-justin-sheehy/},
+  date = {2012-09-15},
+  year = {2012},
+  note = {[Online; accessed 29-November-2012]}
+}
+
+@misc{Widenius12,
+  author = {Roberto V. Zicari},
+  title = {On Eventual Consistency --– Interview with Monty Widenius},
+  url = {http://www.odbms.org/blog/2012/10/on-eventual-consistency-interview-with-monty-widenius/},
+  date = {2012-10-23},
+  year = {2012},
+  note = {[Online; accessed 29-November-2012]}
+}
+
+@misc{badnima10,
+  author = {badnima},
+  title = {Riak SmartMachine Benchmark: The Technical Details},
+  url = {https://www.joyent.com/blog/riak-smartmachine-benchmark-the-technical-details},
+  date = {2010-10-31},
+  year = {2010},
+  note = {[Online; accessed 29-November-2012]}
+}
+
+@misc{wiki:DTN,
+  author = {Wikipedia},
+  title = {Delay-tolerant networking --- Wikipedia{,} The Free Encyclopedia},
+  url = {http://en.wikipedia.org/w/index.php?title=Delay-tolerant_networking&oldid=522645285},
+  date = {2012-11-29},
+  year = {2012},
+  note = {[Online; accessed 29-November-2012]}
+}
+
+@misc{mercurial,
+  author = {{Mercurial Wiki Contributors}},
+  title = {The Mercurial wire protocol},
+  url = {http://mercurial.selenic.com/wiki/WireProtocol},
+  date = {2012-11-29},
+  year = {2012},
+  note = {[Online; accessed 29-November-2012]}
+}
+
+@misc{wiki:darcs,
+  author = {Wikibooks},
+  title = {Understanding Darcs/Patch theory --- Wikibooks{,} The Free Textbook Project},
+  year = {2011},
+  url = {http://en.wikibooks.org/w/index.php?title=Understanding_Darcs/Patch_theory&oldid=2216663},
+  note = {[Online; accessed 30-November-2012]}
+}
+
+@misc{wiki:rsync,
+  author = {Wikipedia},
+  title = {Rsync --- Wikipedia{,} The Free Encyclopedia},
+  year = {2012},
+  url = {http://en.wikipedia.org/w/index.php?title=Rsync&oldid=523354844},
+  note = {[Online; accessed 30-November-2012]}
+}
+
+@article{Myers86ano(nd),
+    author = {Eugene W. Myers},
+    title = {An O(ND) Difference Algorithm and Its Variations},
+    journal = {Algorithmica},
+    year = {1986},
+    volume = {1},
+    pages = {251--266}
+}
+
+@misc{wiki:IPN,
+    author = {Wikipedia},
+    title = {Interplanetary Internet --- Wikipedia{,} The Free Encyclopedia},
+    year = {2012},
+    url = {http://en.wikipedia.org/w/index.php?title=Interplanetary_Internet&oldid=526557460},
+    note = {[Online; accessed 11-January-2013]}
+}
+
+@misc{dtnrg,
+    author = {DTNRG},
+    title = {{Delay Tolerant Networking Research Group}},
+    year = {2012},
+    url = {http://web.archive.org/web/20121105145532/http://www.dtnrg.org/wiki}
+}
+
+@misc{wiki:dtn-routing,
+    author = {Wikipedia},
+    title = {{Routing in delay-tolerant networking --- Wikipedia{,} The Free Encyclopedia}},
+    year = {2012},
+    url = {http://en.wikipedia.org/w/index.php?title=Routing_in_delay-tolerant_networking&oldid=526565698},
+    note = "[Online; accessed 11-January-2013]"
+}
+
+@misc{rfc5050,
+    author = {K. Scott and S. Burleigh},
+    title = {{RFC5050 -- Bundle Protocol Specification}},
+    year = {2007},
+    url = {https://tools.ietf.org/html/rfc5050}
+}
+
+@misc{rfc4838,
+    author = {Vint Cerf},
+    title = {{RFC4838 -- Delay-Tolerant Networking Architecture}},
+    year = {2007},
+    url = {https://tools.ietf.org/html/rfc4838}
+}
+
+@misc{drbd,
+    author = {LINBIT HA-Solutions GmbH},
+    title = {DRBD -- What DRBD does},
+    year = {2012},
+    url = {http://web.archive.org/web/20121011001609/http://www.drbd.org/home/mirroring/}
+}
+
+@misc{drbd-roadmap,
+    author = {LINBIT HA-Solutions GmbH},
+    title = {DRBD -- Future},
+    year = {2012},
+    url = {http://www.drbd.org/home/roadmap/}
+}
+
+@article{akamai,
+    author = {John Diley and Bruce Maggs and Jay Parikh and Harald Prokop and Ramesh Sitaraman and Bill Weihl},
+    title = {Globally Distributed Content Delivery},
+    journal = {IEEE Internet Computing},
+    year = {2002},
+    month = {September},
+    pages = {50--58}
+}
+
+@misc{redis-replication,
+    author = {Salvatore Sanfilippo},
+    title = {{Redis -- Replication}},
+    year = {2012},
+    url = {http://web.archive.org/web/20121022003823/http://redis.io/topics/replication}
+}
+
+@misc{imap-resolution,
+    author = {Kolab},
+    title = {Conflict Resolution --- Kolab Wiki},
+    year = {2012},
+    url = {http://wiki.kolab.org/index.php?title=Conflict_Resolution&oldid=13003#Conflict_Resolution},
+    note = "[Online; accessed 14-January-2013]"
+}
+
+@article{Vog08,
+    author = {Vogels, Werner},
+    title = {{Eventually Consistent}},
+    journal = {Queue},
+    issue_date = {October 2008},
+    volume = {6},
+    number = {6},
+    month = oct,
+    year = {2008},
+    issn = {1542-7730},
+    pages = {14--19},
+    numpages = {6},
+    url = {http://doi.acm.org/10.1145/1466443.1466448},
+    doi = {10.1145/1466443.1466448},
+    acmid = {1466448},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+}
+
+@article{Bal02,
+    author = {Baldoni, Roberto and Klusch, Matthias},
+    title = {{Fundamentals of Distributed Computing: A Practical Tour of Vector Clock Systems}},
+    journal = {IEEE Distributed Systems Online},
+    issue_date = {February 2002},
+    volume = {3},
+    number = {2},
+    month = feb,
+    year = {2002},
+    issn = {1541-4922},
+    url = {http://dl.acm.org/citation.cfm?id=1435723.1437765},
+    acmid = {1437765},
+    publisher = {IEEE Educational Activities Department},
+    address = {Piscataway, NJ, USA},
+}
+
+@misc{rfc2328,
+    author = {J. Moy},
+    title = {RFC2328 -- OSPF Version 2},
+    year = {1998},
+    url = {https://tools.ietf.org/html/rfc2328}
+}
+
+@article{Bur03,
+    title = {{The interplanetary internet: A communications infrastructure for Mars exploration}},
+    journal = {Acta Astronautica},
+    volume = {53},
+    number = {4–10},
+    pages = {365 - 373},
+    year = {2003},
+    issn = {0094-5765},
+    doi = {10.1016/S0094-5765(03)00154-1},
+    url = {http://www.sciencedirect.com/science/article/pii/S0094576503001541},
+    author = {Scott Burleigh and Vinton Cerf and Robert Durst and Kevin Fall and Adrian Hooke and Keith Scott and Howard Weiss}
+}
+
+@article{Tow05,
+    title = {{Telecomunications Infrastructure in Disasters: Preparing Cities for Crisis Comunications}},
+    journal = {Center for Catastrophe Preparedness and Response -- Robert F. Wagner Graduate School of Public Service New York University},
+    year = {2005},
+    url = {https://www.nyu.edu/ccpr/pubs/NYU-DisasterCommunications1-Final.pdf},
+    author = {Anthony M. Townsend and Mitchell L. Moss}
+}
+
+@article{Gil02,
+    author = {Gilbert, Seth and Lynch, Nancy},
+    title = {{Brewer's conjecture and the feasibility of consistent, available, partition-tolerant web services}},
+    journal = {SIGACT News},
+    issue_date = {June 2002},
+    volume = {33},
+    number = {2},
+    month = jun,
+    year = {2002},
+    issn = {0163-5700},
+    pages = {51--59},
+    numpages = {9},
+    url = {http://doi.acm.org/10.1145/564585.564601},
+    doi = {10.1145/564585.564601},
+    acmid = {564601},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+}
+
+@misc{wiki:NoSQL,
+    author = {Wikipedia},
+    title = {{NoSQL --- Wikipedia{,} The Free Encyclopedia}},
+    year = {2013},
+    url = {https://en.wikipedia.org/w/index.php?title=NoSQL&oldid=533177898#Eventually.E2.80.90consistent_key.E2.80.90value_store},
+    note = {[Online; accessed 15-January-2013]}
+}
+
+@misc{wiki:ACID,
+    author = {Wikipedia},
+    title = {{ACID --- Wikipedia{,} The Free Encyclopedia}},
+    year = {2013},
+    url = {http://en.wikipedia.org/w/index.php?title=ACID&oldid=533194085},
+    note = {[Online; accessed 15-January-2013]}
+}
+
+@misc{Hof10,
+    author = {Todd Hoff},
+    title = {{7 Lessons Learned While Building Reddit to 270 Million Page Views a Month}},
+    year = {2010},
+    url = {http://web.archive.org/web/20121014065358/http://highscalability.com/blog/2010/5/17/7-lessons-learned-while-building-reddit-to-270-million-page.html}
+}
+
+@misc{mongodb-transactions,
+    author = {MongoDB},
+    title = {{FAQ: MongoDB for Application Developers}},
+    year = {2012},
+    url = {http://web.archive.org/web/20121024072533/http://docs.mongodb.org/manual/faq/developers/#how-do-i-do-transactions-and-locking-in-mongodb}
+}
+
+@misc{couchdb-transactions,
+    author = {CouchDB},
+    title = {{CouchDB -- Frequently Asked Questions}},
+    year = {2012},
+    url = {https://wiki.apache.org/couchdb/Frequently_asked_questions#How_do_I_use_transactions_with_CouchDB.3F},
+    note = {[Online; accessed 15-January-2013]}
+}
+
+@misc{rfc5405,
+    author = {L. Eggert and G. Fairhurst},
+    title = {{RFC5405 -- Unicast UDP Usage Guidelines for Application Designers}},
+    year = {2008},
+    url = {https://tools.ietf.org/html/rfc5405}
+}
+
+@techreport{Vah00,
+    author = {Amin Vahdat and David Becker},
+    title = {{Epidemic routing for partially-connected ad hoc networks}},
+    institution = {},
+    year = {2000}
+}
+
+@article{Lam78,
+    author = {Lamport, Leslie},
+    title = {Time, clocks, and the ordering of events in a distributed system},
+    journal = {Commun. ACM},
+    issue_date = {July 1978},
+    volume = {21},
+    number = {7},
+    month = jul,
+    year = {1978},
+    issn = {0001-0782},
+    pages = {558--565},
+    numpages = {8},
+    url = {http://doi.acm.org/10.1145/359545.359563},
+    doi = {10.1145/359545.359563},
+    acmid = {359563},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {clock synchronization, computer networks, distributed systems, multiprocess systems},
+}
+
+@misc{wiki:SR,
+    author = {Wikipedia},
+    title = {{Special relativity --- Wikipedia{,} The Free Encyclopedia}},
+    year = {2013},
+    url = {http://en.wikipedia.org/w/index.php?title=Special_relativity&oldid=532215222},
+    note = {[Online; accessed 16-January-2013]}
+}
+
+@inbook{And10,
+    author = {J. Chris Anderson and Jan Lehnardt and Noah Slater},
+    booktitle = {{CouchDB: The Definitive Guide}},
+    title = {{CouchDB -- Conflict Management}},
+    publisher = {O'Reilly Media, Inc.},
+    year = {2010},
+    url = {http://guide.couchdb.org/draft/conflicts.html#conflicts}
+}
