--- a/TODO.org
+++ b/TODO.org
@@ -94,7 +94,7 @@
   http://www.colourlovers.com/palette/1930/cheer_up_emo_kid
 * TODO Draw DB tip
   :LOGBOOK:
-  CLOCK: [2013-05-30 Thu 17:11]
+  CLOCK: [2013-05-30 Thu 17:11]--[2013-05-30 Thu 17:24] =>  0:13
   CLOCK: [2013-05-30 Thu 16:00]--[2013-05-30 Thu 17:06] =>  1:06
   CLOCK: [2013-05-30 Thu 14:40]--[2013-05-30 Thu 15:10] =>  0:30
   CLOCK: [2013-05-30 Thu 13:04]--[2013-05-30 Thu 14:10] =>  1:06
