--- a/TODO.org
+++ b/TODO.org
@@ -47,7 +47,7 @@
   - [X] Graph sets/gets
 * TODO UDP Connections
   :LOGBOOK:
-  CLOCK: [2013-05-31 Fri 20:13]--[2013-05-31 Fri 20:17] =>  0:04
+  CLOCK: [2013-05-31 Fri 20:13]--[2013-05-31 Fri 21:31] =>  1:18
   CLOCK: [2013-05-31 Fri 15:43]--[2013-05-31 Fri 16:13] =>  0:30
   CLOCK: [2013-05-30 Thu 01:37]--[2013-05-30 Thu 02:17] =>  0:40
   CLOCK: [2013-05-29 Wed 17:46]--[2013-05-29 Wed 18:38] =>  0:52
@@ -63,7 +63,7 @@
   :END:
   Nodes should have a set of "neighbor" nodes which they propagate
   updates to, and request updates from.
-  - [ ] Version Clock held by the store
+  - [X] Version Clock held by the store
   - [ ] Key history "from VC to VC"
   - [ ] Propagate store changes to neighbours
   - [ ] Receive store changes from neighbours
