--- a/TODO.org
+++ b/TODO.org
@@ -47,6 +47,7 @@
   - [X] Graph sets/gets
 * TODO UDP Connections
   :LOGBOOK:
+  CLOCK: [2013-06-03 Mon 12:01]
   CLOCK: [2013-06-03 Mon 00:17]--[2013-06-03 Mon 00:23] =>  0:06
   CLOCK: [2013-06-01 Sat 23:44]--[2013-06-02 Sun 00:12] =>  0:28
   CLOCK: [2013-06-01 Sat 17:35]--[2013-06-01 Sat 17:43] =>  0:08
