--- a/TODO.org
+++ b/TODO.org
@@ -47,7 +47,7 @@
   - [X] Graph sets/gets
 * TODO UDP Connections
   :LOGBOOK:
-  CLOCK: [2013-06-03 Mon 12:01]
+  CLOCK: [2013-06-03 Mon 12:01]--[2013-06-03 Mon 12:26] =>  0:25
   CLOCK: [2013-06-03 Mon 00:17]--[2013-06-03 Mon 00:23] =>  0:06
   CLOCK: [2013-06-01 Sat 23:44]--[2013-06-02 Sun 00:12] =>  0:28
   CLOCK: [2013-06-01 Sat 17:35]--[2013-06-01 Sat 17:43] =>  0:08
@@ -107,6 +107,11 @@
   ColourLovers to the rescue!
 
   http://www.colourlovers.com/palette/1930/cheer_up_emo_kid
+* DONE Get rid of GADTs
+  :LOGBOOK:
+  CLOCK: [2013-06-03 Mon 12:26]--[2013-06-03 Mon 15:00] =>  2:34
+  :END:
+* TODO Stringly typed Redis interface
 * TODO Draw DB tip
   :LOGBOOK:
   CLOCK: [2013-05-30 Thu 17:11]--[2013-05-30 Thu 17:24] =>  0:13
