--- a/TODO.org
+++ b/TODO.org
@@ -154,6 +154,8 @@
 * Final Report
 * Code improvements
   :LOGBOOK:
+  CLOCK: [2013-06-03 Mon 16:18]--[2013-06-03 Mon 16:26] =>  0:08
+  CLOCK: [2013-06-03 Mon 16:06]--[2013-06-03 Mon 16:10] =>  0:04
   CLOCK: [2013-05-30 Thu 22:29]--[2013-05-30 Thu 22:34] =>  0:05
   CLOCK: [2013-05-26 Sun 02:26]--[2013-05-26 Sun 02:30] =>  0:04
   :END:
