--- a/TODO.org
+++ b/TODO.org
@@ -47,6 +47,7 @@
   - [X] Graph sets/gets
 * TODO UDP Connections
   :LOGBOOK:
+  CLOCK: [2013-06-03 Mon 16:27]--[2013-06-03 Mon 16:53] =>  0:26
   CLOCK: [2013-06-03 Mon 12:01]--[2013-06-03 Mon 12:26] =>  0:25
   CLOCK: [2013-06-03 Mon 00:17]--[2013-06-03 Mon 00:23] =>  0:06
   CLOCK: [2013-06-01 Sat 23:44]--[2013-06-02 Sun 00:12] =>  0:28
@@ -75,7 +76,7 @@
   - [X] Node update messages should include a version clock and a
     multi-set
   - [X] Get rid of the Ltc.Adapter hierarchy
-  - [ ] SmallCheck tests for NodeProtocol
+  - [X] SmallCheck tests for NodeProtocol
   - [ ] Receive store changes from neighbours
   - [ ] Keep track of suspected neighbour version clock
   - [ ] Propagate store changes to neighbours
