--- a/TODO.org
+++ b/TODO.org
@@ -155,7 +155,7 @@
 * Final Report
 * Code improvements
   :LOGBOOK:
-  CLOCK: [2013-06-03 Mon 16:56]
+  CLOCK: [2013-06-03 Mon 16:56]--[2013-06-03 Mon 17:19] =>  0:23
   CLOCK: [2013-06-03 Mon 16:18]--[2013-06-03 Mon 16:26] =>  0:08
   CLOCK: [2013-06-03 Mon 16:06]--[2013-06-03 Mon 16:10] =>  0:04
   CLOCK: [2013-05-30 Thu 22:29]--[2013-05-30 Thu 22:34] =>  0:05
