--- a/TODO.org
+++ b/TODO.org
@@ -47,6 +47,7 @@
   - [X] Graph sets/gets
 * TODO UDP Connections
   :LOGBOOK:
+  CLOCK: [2013-06-03 Mon 19:40]--[2013-06-03 Mon 19:50] =>  0:00
   CLOCK: [2013-06-03 Mon 16:27]--[2013-06-03 Mon 16:53] =>  0:26
   CLOCK: [2013-06-03 Mon 12:01]--[2013-06-03 Mon 12:26] =>  0:25
   CLOCK: [2013-06-03 Mon 00:17]--[2013-06-03 Mon 00:23] =>  0:06
