we don't need to pass the network interface around anymore

--- a/TODO.org
+++ b/TODO.org
@@ -159,6 +159,7 @@
 * Final Report
 * Code improvements
   :LOGBOOK:
+  CLOCK: [2013-06-04 Tue 00:35]--[2013-06-04 Tue 00:37] =>  0:02
   CLOCK: [2013-06-03 Mon 16:56]--[2013-06-03 Mon 17:19] =>  0:23
   CLOCK: [2013-06-03 Mon 16:18]--[2013-06-03 Mon 16:26] =>  0:08
   CLOCK: [2013-06-03 Mon 16:06]--[2013-06-03 Mon 16:10] =>  0:04
