--- a/TODO.org
+++ b/TODO.org
@@ -138,7 +138,10 @@
   http://code.shutterstock.com/rickshaw/tutorial/introduction.html
 * TODO SQL Store Backend
   It's going to be SQLite, but it should work on any SQL database.
-* TODO Custom Type Test
+* DONE Custom Type Test
+  :LOGBOOK:
+  CLOCK: [2013-06-04 Tue 00:51]--[2013-06-04 Tue 01:15] =>  0:24
+  :END:
 * TODO Multi-entry changes
   :LOGBOOK:
   CLOCK: [2013-06-01 Sat 23:42]--[2013-06-01 Sat 23:43] =>  0:01
