artificial delay interface is now configurable

--- a/TODO.org
+++ b/TODO.org
@@ -153,6 +153,11 @@
   - [ ] mget
 * TODO Better merging
 * TODO Artificial delay network interface
+  :LOGBOOK:
+  CLOCK: [2013-06-04 Tue 12:32]--[2013-06-04 Tue 13:13] =>  0:41
+  :END:
+  - [X] Configurable stub
+  - [ ] Artificial delays
 * TODO Test network interfaces
 * TODO Temporal logic formalization
   Figure out what properties the whole thing should have, and what
