--- a/TODO.org
+++ b/TODO.org
@@ -47,6 +47,8 @@
   - [X] Graph sets/gets
 * TODO UDP Connections
   :LOGBOOK:
+  CLOCK: [2013-06-04 Tue 13:34]--[2013-06-04 Tue 13:37] =>  0:03
+  CLOCK: [2013-06-04 Tue 13:23]--[2013-06-04 Tue 13:31] =>  0:08
   CLOCK: [2013-06-04 Tue 00:05]--[2013-06-04 Tue 00:34] =>  0:29
   CLOCK: [2013-06-03 Mon 19:52]--[2013-06-03 Mon 19:54] =>  0:02
   CLOCK: [2013-06-03 Mon 19:40]--[2013-06-03 Mon 19:50] =>  0:00
@@ -80,7 +82,8 @@
     multi-set
   - [X] Get rid of the Ltc.Adapter hierarchy
   - [X] SmallCheck tests for NodeProtocol
-  - [ ] Receive store changes from neighbours
+  - [X] Receive store changes from neighbours
+  - [ ] Apply changes from neighbours
   - [X] Keep track of suspected neighbour version clock
   - [ ] Propagate store changes to neighbours
   - [ ] Initial synchronization with neighbours
