titles in bibliography should be included ad litteram

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1,8 +1,8 @@
 @incollection{Fogel12,
   author = {Karl Fogel},
   editor = {Andy Oram and Greg Wilson},
-  booktitle = {Beautiful Code},
-  title = {Subversion's Delta Editor: Interface As Ontology},
+  booktitle = {{Beautiful Code}},
+  title = {{Subversion's Delta Editor: Interface As Ontology}},
   publisher = {O'Reilly Media},
   date = {2007-06-26},
   year = {2007}
@@ -10,8 +10,8 @@
 
 @inbook{Chacon09,
   author = {Scott Chacon},
-  booktitle = {Pro Git},
-  title = {Git Internals - Transfer Protocols},
+  booktitle = {{Pro Git}},
+  title = {{Git Internals - Transfer Protocols}},
   publisher = {Apress},
   date = {2009-09-27},
   year = {2009}
@@ -19,7 +19,7 @@
 
 @misc{Zicari12,
   author = {Roberto V. Zicari},
-  title = {Two Cons Against NoSQL. Part I},
+  title = {{Two Cons Against NoSQL. Part I}},
   url = {http://www.odbms.org/blog/2012/10/two-cons-against-nosql-part-i/},
   date = {2012-10-30},
   year = {2012},
@@ -28,7 +28,7 @@
 
 @misc{Sheehy12,
   author = {Roberto V. Zicari},
-  title = {On Eventual Consistency --– An interview with Justin Sheehy},
+  title = {{On Eventual Consistency --– An interview with Justin Sheehy}},
   url = {http://www.odbms.org/blog/2012/08/on-eventual-consistency-an-interview-with-justin-sheehy/},
   date = {2012-09-15},
   year = {2012},
@@ -37,7 +37,7 @@
 
 @misc{Widenius12,
   author = {Roberto V. Zicari},
-  title = {On Eventual Consistency --– Interview with Monty Widenius},
+  title = {{On Eventual Consistency --– Interview with Monty Widenius}},
   url = {http://www.odbms.org/blog/2012/10/on-eventual-consistency-interview-with-monty-widenius/},
   date = {2012-10-23},
   year = {2012},
@@ -46,7 +46,7 @@
 
 @misc{badnima10,
   author = {badnima},
-  title = {Riak SmartMachine Benchmark: The Technical Details},
+  title = {{Riak SmartMachine Benchmark: The Technical Details}},
   url = {https://www.joyent.com/blog/riak-smartmachine-benchmark-the-technical-details},
   date = {2010-10-31},
   year = {2010},
@@ -55,7 +55,7 @@
 
 @misc{wiki:DTN,
   author = {Wikipedia},
-  title = {Delay-tolerant networking --- Wikipedia{,} The Free Encyclopedia},
+  title = {{Delay-tolerant networking --- Wikipedia{,} The Free Encyclopedia}},
   url = {http://en.wikipedia.org/w/index.php?title=Delay-tolerant_networking&oldid=522645285},
   date = {2012-11-29},
   year = {2012},
@@ -64,7 +64,7 @@
 
 @misc{mercurial,
   author = {{Mercurial Wiki Contributors}},
-  title = {The Mercurial wire protocol},
+  title = {{The Mercurial Wire Protocol}},
   url = {http://mercurial.selenic.com/wiki/WireProtocol},
   date = {2012-11-29},
   year = {2012},
@@ -73,7 +73,7 @@
 
 @misc{wiki:darcs,
   author = {Wikibooks},
-  title = {Understanding Darcs/Patch theory --- Wikibooks{,} The Free Textbook Project},
+  title = {{Understanding Darcs/Patch theory --- Wikibooks{,} The Free Textbook Project}},
   year = {2011},
   url = {http://en.wikibooks.org/w/index.php?title=Understanding_Darcs/Patch_theory&oldid=2216663},
   note = {[Online; accessed 30-November-2012]}
@@ -81,7 +81,7 @@
 
 @misc{wiki:rsync,
   author = {Wikipedia},
-  title = {Rsync --- Wikipedia{,} The Free Encyclopedia},
+  title = {{Rsync --- Wikipedia{,} The Free Encyclopedia}},
   year = {2012},
   url = {http://en.wikipedia.org/w/index.php?title=Rsync&oldid=523354844},
   note = {[Online; accessed 30-November-2012]}
@@ -89,7 +89,7 @@
 
 @article{Myers86ano(nd),
     author = {Eugene W. Myers},
-    title = {An O(ND) Difference Algorithm and Its Variations},
+    title = {{An O(ND) Difference Algorithm and Its Variations}},
     journal = {Algorithmica},
     year = {1986},
     volume = {1},
@@ -98,7 +98,7 @@
 
 @misc{wiki:IPN,
     author = {Wikipedia},
-    title = {Interplanetary Internet --- Wikipedia{,} The Free Encyclopedia},
+    title = {{Interplanetary Internet --- Wikipedia{,} The Free Encyclopedia}},
     year = {2012},
     url = {http://en.wikipedia.org/w/index.php?title=Interplanetary_Internet&oldid=526557460},
     note = {[Online; accessed 11-January-2013]}
@@ -135,21 +135,21 @@
 
 @misc{drbd,
     author = {LINBIT HA-Solutions GmbH},
-    title = {DRBD -- What DRBD does},
+    title = {{DRBD -- What DRBD does}},
     year = {2012},
     url = {http://web.archive.org/web/20121011001609/http://www.drbd.org/home/mirroring/}
 }
 
 @misc{drbd-roadmap,
     author = {LINBIT HA-Solutions GmbH},
-    title = {DRBD -- Future},
+    title = {{DRBD -- Future}},
     year = {2012},
     url = {http://www.drbd.org/home/roadmap/}
 }
 
 @article{akamai,
     author = {John Diley and Bruce Maggs and Jay Parikh and Harald Prokop and Ramesh Sitaraman and Bill Weihl},
-    title = {Globally Distributed Content Delivery},
+    title = {{Globally Distributed Content Delivery}},
     journal = {IEEE Internet Computing},
     year = {2002},
     month = {September},
@@ -165,7 +165,7 @@
 
 @misc{imap-resolution,
     author = {Kolab},
-    title = {Conflict Resolution --- Kolab Wiki},
+    title = {{Conflict Resolution --- Kolab Wiki}},
     year = {2012},
     url = {http://wiki.kolab.org/index.php?title=Conflict_Resolution&oldid=13003#Conflict_Resolution},
     note = "[Online; accessed 14-January-2013]"
@@ -208,7 +208,7 @@
 
 @misc{rfc2328,
     author = {J. Moy},
-    title = {RFC2328 -- OSPF Version 2},
+    title = {{RFC2328 -- OSPF Version 2}},
     year = {1998},
     url = {https://tools.ietf.org/html/rfc2328}
 }
@@ -307,7 +307,7 @@
 
 @article{Lam78,
     author = {Lamport, Leslie},
-    title = {Time, clocks, and the ordering of events in a distributed system},
+    title = {{Time, clocks, and the ordering of events in a distributed system}},
     journal = {Commun. ACM},
     issue_date = {July 1978},
     volume = {21},
