normalize bibliography titles

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -121,30 +121,30 @@
 
 @misc{rfc5050,
     author = {K. Scott and S. Burleigh},
-    title = {{RFC5050 -- Bundle Protocol Specification}},
+    title = {{RFC5050 --- Bundle Protocol Specification}},
     year = {2007},
     url = {https://tools.ietf.org/html/rfc5050}
 }
 
 @misc{rfc4838,
     author = {Vint Cerf},
-    title = {{RFC4838 -- Delay-Tolerant Networking Architecture}},
+    title = {{RFC4838 --- Delay-Tolerant Networking Architecture}},
     year = {2007},
     url = {https://tools.ietf.org/html/rfc4838}
 }
 
 @misc{drbd,
     author = {LINBIT HA-Solutions GmbH},
-    title = {{DRBD -- What DRBD does}},
+    title = {{What DRBD does --- DRDB}},
     year = {2012},
     url = {http://web.archive.org/web/20121011001609/http://www.drbd.org/home/mirroring/}
 }
 
 @misc{drbd-roadmap,
     author = {LINBIT HA-Solutions GmbH},
-    title = {{DRBD -- Future}},
+    title = {{Future --- DRDB}},
     year = {2012},
-    url = {http://www.drbd.org/home/roadmap/}
+    url = {http://web.archive.org/web/20130425141651/http://www.drbd.org/home/roadmap/}
 }
 
 @article{akamai,
@@ -158,7 +158,7 @@
 
 @misc{redis-replication,
     author = {Salvatore Sanfilippo},
-    title = {{Redis -- Replication}},
+    title = {{Replication --- Redis}},
     year = {2012},
     url = {http://web.archive.org/web/20121022003823/http://redis.io/topics/replication}
 }
@@ -208,7 +208,7 @@
 
 @misc{rfc2328,
     author = {J. Moy},
-    title = {{RFC2328 -- OSPF Version 2}},
+    title = {{RFC2328 --- OSPF Version 2}},
     year = {1998},
     url = {https://tools.ietf.org/html/rfc2328}
 }
@@ -228,7 +228,7 @@
 
 @article{Tow05,
     title = {{Telecomunications Infrastructure in Disasters: Preparing Cities for Crisis Comunications}},
-    journal = {Center for Catastrophe Preparedness and Response -- Robert F. Wagner Graduate School of Public Service New York University},
+    journal = {Center for Catastrophe Preparedness and Response --- Robert F. Wagner Graduate School of Public Service New York University},
     year = {2005},
     url = {https://www.nyu.edu/ccpr/pubs/NYU-DisasterCommunications1-Final.pdf},
     author = {Anthony M. Townsend and Mitchell L. Moss}
@@ -278,14 +278,14 @@
 
 @misc{mongodb-transactions,
     author = {MongoDB},
-    title = {{FAQ: MongoDB for Application Developers}},
+    title = {{FAQ --- MongoDB for Application Developers}},
     year = {2012},
     url = {http://web.archive.org/web/20121024072533/http://docs.mongodb.org/manual/faq/developers/#how-do-i-do-transactions-and-locking-in-mongodb}
 }
 
 @misc{couchdb-transactions,
     author = {CouchDB},
-    title = {{CouchDB -- Frequently Asked Questions}},
+    title = {{CouchDB --- Frequently Asked Questions}},
     year = {2012},
     url = {https://wiki.apache.org/couchdb/Frequently_asked_questions#How_do_I_use_transactions_with_CouchDB.3F},
     note = {[Online; accessed 15-January-2013]}
@@ -293,7 +293,7 @@
 
 @misc{rfc5405,
     author = {L. Eggert and G. Fairhurst},
-    title = {{RFC5405 -- Unicast UDP Usage Guidelines for Application Designers}},
+    title = {{RFC5405 --- Unicast UDP Usage Guidelines for Application Designers}},
     year = {2008},
     url = {https://tools.ietf.org/html/rfc5405}
 }
